--- a/SD-210 Assignment2/SD-210 Assignment2.csproj
+++ b/SD-210 Assignment2/SD-210 Assignment2.csproj
@@ -245,6 +245,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\Domain\" />
+    <Folder Include="Models\ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
