--- a/SD-210 Assignment2/SD-210 Assignment2.csproj
+++ b/SD-210 Assignment2/SD-210 Assignment2.csproj
@@ -181,8 +181,14 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Domain\Customer.cs" />
+    <Compile Include="Models\Domain\Reservations.cs" />
+    <Compile Include="Models\Domain\Room.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MyHelpers\DailyRate.cs" />
+    <Compile Include="Models\MyHelpers\RoomNumber.cs" />
+    <Compile Include="Models\MyHelpers\RoomType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -245,7 +251,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\Domain\" />
     <Folder Include="Models\ViewModels\" />
   </ItemGroup>
   <ItemGroup>
